fix: enable signup confirm lambda

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,8 +11,13 @@ provider:
   name: aws
   runtime: nodejs16.x
   region: us-east-2
+  stage: dev
+  environment:
+    STAGE: ${self:custom.stage}
+    AWS_NODEJS_CONNECTION_REUSE_ENABLED: "1"
 
 custom:
+  stage: ${opt:stage, self:provider.stage}
   appSync:
   - ${file(serverless.appsync.yaml)}
 package: 
@@ -21,9 +26,36 @@ package:
     - package.json
 plugins:
   - serverless-appsync-plugin
+  - serverless-iam-roles-per-function
+
+functions:
+  confirmUserSignup:
+    handler: functions/confirm-user-signup.handler
+    environment:
+      USERS_TABLE: !Ref UsersTable
+    
+    iamRoleStatements:
+      - Effect: Allow
+        Action: dynamodb:PutItem
+        Resource: !GetAtt UsersTable.Arn
 
 resources:
   Resources:
+    UsersTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        Tags:
+          - Key: Environment
+            Value: ${self:custom.stage}
+          - Key: Name
+            Value: users-table
     WebUserPoolClient:
       Type: AWS::Cognito::UserPoolClient
       Properties:
@@ -53,6 +85,16 @@ resources:
             Name: name 
             Required: false
             Mutable: true 
+        LambdaConfig:
+          PostConfirmation: !GetAtt ConfirmUserSignupLambdaFunction.Arn
+
+    UserPoolInvokeConfirmUserSignupLambdaPermission:
+      Type: AWS::Lambda::Permission
+      Properties:
+        Action: lambda:invokeFunction
+        FunctionName: !Ref ConfirmUserSignupLambdaFunction 
+        Principal: cognito-idp.amazonaws.com
+        SourceArn: !GetAtt CognitoUserPool.Arn 
   Outputs:
     CognitoUserPoolId:
       Value: !Ref CognitoUserPool
