--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/joshughes/appsyncmasterclass-backend#readme",
   "devDependencies": {
+    "aws-sdk": "^2.1304.0",
     "serverless": "^3.27.0",
-    "serverless-appsync-plugin": "^1.14.0"
+    "serverless-appsync-plugin": "^1.14.0",
+    "serverless-iam-roles-per-function": "^3.2.0-e97ab49"
+  },
+  "dependencies": {
+    "chance": "^1.1.9"
   }
 }
