--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "exportEnv": "serverless export-env --all",
     "integration-test": "jest --verbose --testPathPattern=__tests__/test_cases/integration",
+    "e2e-test": "jest --verbose --testPathPattern=__tests__/test_cases/e2e",
     "sls": "sls"
   },
   "repository": {
@@ -22,13 +23,15 @@
   "homepage": "https://github.com/joshughes/appsyncmasterclass-backend#readme",
   "devDependencies": {
     "@types/jest": "^29.5.2",
-    "chance": "^1.1.9",
+    "aws-sdk": "^2.1390.0",
     "dotenv": "^16.1.3",
     "jest": "^29.5.0",
     "serverless": "^3.27.0",
     "serverless-appsync-plugin": "^1.14.0",
     "serverless-export-env": "^2.2.0",
-    "serverless-iam-roles-per-function": "^3.2.0-e97ab49",
-    "aws-sdk": "^2.1390.0"
+    "serverless-iam-roles-per-function": "^3.2.0-e97ab49"
+  },
+  "dependencies": {
+    "chance": "^1.1.11"
   }
 }
