--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "exportEnv": "serverless export-env --all",
     "integration-test": "jest --verbose --testPathPattern=__tests__/test_cases/integration",
     "e2e-test": "jest --verbose --testPathPattern=__tests__/test_cases/e2e",
+    "unit-test": "jest --verbose --testPathPattern=__tests__/test_cases/unit",
     "sls": "sls"
   },
   "repository": {
@@ -23,6 +24,8 @@
   "homepage": "https://github.com/joshughes/appsyncmasterclass-backend#readme",
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "amplify-appsync-simulator": "^2.4.1",
+    "amplify-velocity-template": "^1.4.11",
     "aws-sdk": "^2.1390.0",
     "dotenv": "^16.1.3",
     "jest": "^29.5.0",
