--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "amplify-appsync-simulator": "^2.4.1",
     "amplify-velocity-template": "^1.4.11",
     "aws-sdk": "^2.1390.0",
+    "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "jest": "^29.5.0",
+    "lodash": "^4.17.21",
     "serverless": "^3.27.0",
     "serverless-appsync-plugin": "^1.14.0",
     "serverless-export-env": "^2.2.0",
