--- a/serverless.yml
+++ b/serverless.yml
@@ -21,6 +21,11 @@ custom:
   region: ${opt:region, self:provider.region}
   appSync:
     - ${file(serverless.appsync.yaml)}
+  manifest:
+    postProcess: ./processManifest.js
+    disablePostDeployGeneration: true
+    disableOutput: true
+    silent: true
 package:
   exclude:
     - package-lock.json
@@ -29,6 +34,7 @@ plugins:
   - serverless-appsync-plugin
   - serverless-iam-roles-per-function
   - serverless-export-env
+  - serverless-manifest-plugin
 
 functions:
   confirmUserSignup:
