--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ jspm_packages
 # Serverless directories
 .serverless
 node_modules
+
+# Ignore serverless manifest files
+serverless.manifest.json
+.serverless/manifest.json
