--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "exportEnv": "serverless export-env --all",
+    "exportEnv": "serverless export-env --all && sls manifest",
     "integration-test": "jest --verbose --testPathPattern=__tests__/test_cases/integration",
     "e2e-test": "jest --verbose --testPathPattern=__tests__/test_cases/e2e",
     "unit-test": "jest --verbose --testPathPattern=__tests__/test_cases/unit",
@@ -34,7 +34,8 @@
     "serverless": "^3.27.0",
     "serverless-appsync-plugin": "^1.14.0",
     "serverless-export-env": "^2.2.0",
-    "serverless-iam-roles-per-function": "^3.2.0-e97ab49"
+    "serverless-iam-roles-per-function": "^3.2.0-e97ab49",
+    "serverless-manifest-plugin": "^1.0.9"
   },
   "dependencies": {
     "chance": "^1.1.11"
